# aether-drive

./: .cursorrules  ANALYSE_PROTON_FEATURES.md  ANALYSE_STORJ_WAYNE.md  ARCHITECTURE_STORJ_TRANSPARENT.md  COMMANDES_TEST_COMPLETES.txt  GUIDE_TEST_MULTI_APPAREILS.md  GUIDE_TEST_REFRESH_TOKENS.md  TEST_INTEGRAL.md  TEST_METADONNEES.md  WORKFLOW_CONNEXION.md  package-lock.json  package.json  test-refresh-manual.sh  test-refresh-tokens.sh  wayne-server-setup.sh
.cursor/: blueprint.md  etat_actuel.md
src/: App.css  App.tsx  wayne_client.ts  wayne_dto.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/crypto/: mkek.rs  mod.rs
src-tauri/src/index/: merkle.rs  mod.rs  sqlcipher.rs
src-tauri/src/storage/: aether_format.rs  mod.rs
src-tauri/src/storj/: mod.rs
src/components/: Button.css  Button.tsx  Card.css  Card.tsx  Input.css  Input.tsx  LoadingSpinner.css  LoadingSpinner.tsx  SettingsModal.css  SettingsModal.tsx  StatusMessage.css  StatusMessage.tsx
src/pages/: DashboardPage.css  DashboardPage.tsx  LoginPage.css  LoginPage.tsx  UnlockPage.css  UnlockPage.tsx
src/utils/: retry.ts
wayne-server/: INSTALL.md  README.md  SETUP-DOMAIN.md  configure-ssl.sh  deploy.sh  diagnose-server.sh  enable-ip-access.sh  env.template  install-on-server.sh  package-lock.json  package.json
wayne-server/migrations/: 001_initial_schema.sql  002_add_storj_buckets.sql  002_file_metadata.sql
wayne-server/src/: index.ts
wayne-server/src/db/: connection.ts  migrate.ts
wayne-server/src/middleware/: auth.ts
wayne-server/src/models/: KeyEnvelope.ts  (+4 more)
(+6 files in other folders)
