[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand_core = "0.6"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
secrecy = "0.10"
memsec = "0.7"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = { version = "1.15", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
